--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Fallout 4 "Please Stand-By" Loading Screen</title>
+  <title>Please Stand-By</title>
   
   
   
